--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
   </head>
   <body>
     <div class="containerluar">
-    <div class="header">
-      
-      <a href="#" class="logo"><span>Dwi</span>cahyo</a>
+      <div class="header">
+        <a href="#" class="logo"><span>Dwi</span>cahyo</a>
 
-      <nav class="navbar">
-        <a href="#" class="active">portofolio</a>
-        <a href="#">Profile</a>
-        <a href="#">Experience</a>
-        <a href="#">Skill</a>
-      </nav>
-      <a href="#" class="contact">contact me</a>
-      
-    </div>
+        <nav class="navbar">
+          <a href="#">Profile</a>
+          <a href="#">Experience</a>
+          <a href="#">Skill</a>
+        </nav>
+        <a href="#" class="contact">contact me</a>
+      </div>
     </div>
 
     <section class="home">
@@ -39,9 +36,78 @@
           <button class="btn-2">Experience</button>
         </div>
       </div>
-      <img
-        src="c:\Users\singg\OneDrive\Documents\html dwi\WhatsApp Image 2024-09-29 at 22.13.32.jpeg"
-      />
+      <div class="imgbox">
+        <img src="dwiportofolio.jpeg" />
+      </div>
+    </section>
+
+    <div class="containerdalam">
+      <h2 class="experience1">
+        My first experience was being a store manager in the fashion sector for
+        1 year.
+      </h2>
+      <h2 class="experience1">
+        My second experience was that I was a quality control in the retail
+        sector and had been a supervisor in the same sector.
+      </h2>
+      <h2 class="experience1">
+        I was also a data analyst admin at a finance company
+      </h2>
+      <h2 class="experience1">
+        and currently I focus on the development field, namely as a frontend
+        developer.
+      </h2>
+      <div class="imgbox1">
+        <img src="dwiportofolio.jpeg" />
+      </div>
+    </div>
+    <section class="home1">
+      <div class="home-content1">
+        <h3>About me</h3>
+        <h1>
+          I'm<span>Dwi<br /></span>a Frontend Developer
+        </h1>
+        <p>
+          - I have several skills in certain fields, one of which is I can play
+          music very well, I can play the guitar very well, I am quite good at
+          creating music content.
+        </p>
+        <p>- I am quite good at communicating,</p>
+        <p>- I am quite thorough in doing things,</p>
+        <p>- I can easily adapt to the surrounding environment,</p>
+        <p>
+          - I can operate the system quite well and I am a person who is not
+          easily satisfied with what I want to achieve.
+        </p>
+        <h1>
+          If you are interested and want to know more about me, please contact
+          me.
+        </h1>
+      </div>
+      <div class="imgbox2">
+        <img src="dwiportofolio.jpeg" />
+      </div>
+    </section>
+    <section class="contact-form">
+      <h2 class="contact-me">contact <span>me</span></h2>
+      <form action="#">
+        <div class="input-box">
+          <input type="text" placeholder="Fullname" />
+          <input type="email" placeholder="email" />
+        </div>
+        <div class="input-box">
+          <input type="number" placeholder="phone number" />
+          <input type="text" placeholder="subject" />
+        </div>
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Your Message"
+        ></textarea>
+        <input type="submit" value="Send Message" class="btn-1" />
+      </form>
     </section>
   </body>
 </html>
