--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
         <a href="#" class="logo"><span>Dwi</span>cahyo</a>
 
         <nav class="navbar">
-          <a href="#">Profile</a>
-          <a href="#">Experience</a>
-          <a href="#">Skill</a>
+          <a href="#profile">Profile</a>
+          <a href="#experience">Experience</a>
+          <a href="#skill">Skill</a>
         </nav>
-        <a href="#" class="contact">contact me</a>
+        <a href="#contact" class="contact">contact me</a>
       </div>
     </div>
 
-    <section class="home">
+    <section id="profile" class="home">
+      <img class="homebackground" src="foto3.jpg" />
       <div class="home-content">
         <h3>Hi</h3>
         <h1>
@@ -36,12 +37,17 @@
           <button class="btn-2">Experience</button>
         </div>
       </div>
+
       <div class="imgbox">
         <img src="dwiportofolio.jpeg" />
       </div>
     </section>
 
-    <div class="containerdalam">
+    <div id="experience" class="containerdalam">
+      <img
+        class="backgroundcontainer"
+        src="eben-espinosa-CTFS9VRaQwo-unsplash.jpg"
+      />
       <h2 class="experience1">
         My first experience was being a store manager in the fashion sector for
         1 year.
@@ -57,11 +63,12 @@
         and currently I focus on the development field, namely as a frontend
         developer.
       </h2>
-      <div class="imgbox1">
+      <div class="imgbox">
         <img src="dwiportofolio.jpeg" />
       </div>
     </div>
-    <section class="home1">
+    <section id="skill" class="home1">
+      <img class="backgroundskill" src="foto3.jpg" />
       <div class="home-content1">
         <h3>About me</h3>
         <h1>
@@ -84,11 +91,11 @@
           me.
         </h1>
       </div>
-      <div class="imgbox2">
+      <div class="imgbox">
         <img src="dwiportofolio.jpeg" />
       </div>
     </section>
-    <section class="contact-form">
+    <section id="contact" class="contact-form">
       <h2 class="contact-me">contact <span>me</span></h2>
       <form action="#">
         <div class="input-box">
